<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2024 The ChromiumOS Authors
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file.
-->

<resources>
    <string name="app_name" translatable="false">ARC Locale Changer Demo</string>
    <string name="spanish_button_text" translatable="true">Spanish</string>
    <string name="english_button_text" translatable="true">English</string>
    <string name="french_button_text" translatable="true">French</string>
    <string name="default_button_text" translatable="true">Default</string>
    <string name="empty_locale_text" translatable="true">Current app locale: unknown</string>
    <string name="current_locale_text" translatable="true">Current app locale: %1$s</string>
</resources>
